# Pong

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: Application.cpp  Application.hpp  Ball.cpp  Ball.hpp  Paddle.cpp  Paddle.hpp  main.cpp
